--- a/index.Rmd
+++ b/index.Rmd
@@ -4,11 +4,14 @@ author: "Keegan Elmer"
 output:
   html_document:
     theme: cosmo
-    toc: true
+    toc: yes
     toc_depth: 2
-    fig_caption: true
+    fig_caption: yes
     fig_width: 6
     fig_height: 4
+  pdf_document:
+    toc: yes
+    toc_depth: '2'
 ---
 
 ***
@@ -38,6 +41,11 @@ output:
 ***
   
 ```{r child = "chapter5.Rmd"}
+```
+
+***
+  
+```{r child = "chapter6.Rmd"}
 ```
 
 ***
